--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,33 @@
+version: '3.8'
 services:
   contabilidade:
     build:
       context: .
       dockerfile: Dockerfile
-    network_mode: "contab"
+    networks:
+      - contab
     restart: always
+
+  mysql:
+    image: mysql:8.0
+    environment:
+      MYSQL_ROOT_PASSWORD: f0304yxc10
+    ports:
+      - "3389:3306"
+    command: --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
+    volumes:
+      - ./volumedb:/var/lib/mysql
+    networks:
+      - contab
+
+  redis:
+    image: redis/redis-stack-server:7.2.0-v9
+    networks:
+      - contab
+    ports:
+      - "6379:6379"
+
+networks:
+  contab:
+    driver: bridge
+
