--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=jdbc:mysql://localhost:33088/contas
+spring.datasource.url=jdbc:mysql://localhost:3306/contas
 spring.datasource.username=root
 spring.datasource.password=f0304yxc10
-!--spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 !-- spring.datasource.url=jdbc:mysql://localhost:3306/contas
 !-- spring.datasource.username=root
 !-- spring.datasource.password=f0304yxc10
